Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/NoFinal3.out
NoFinal3.java:11:17: compiler.err.enum.no.finalize
1 error
